[FIX] web: Incorrect tags color in dark mode
Steps to reproduce
==================

CRM > Tag > Click on Tooltip > Red color seems Green and Green color seems Red.

opw-3085369

--- a/addons/web/static/src/core/colorlist/colorlist.scss
+++ b/addons/web/static/src/core/colorlist/colorlist.scss
@@ -11,9 +11,9 @@
 }
 
 // Set all the colors but the "no-color" one
-@for $size from 2 through length($o-colors) {
+@for $size from 2 through length($o-colors-original) {
     .o_colorlist_item_color_#{$size - 1} {
-        background-color: nth($o-colors, $size);
+        background-color: nth($o-colors-original, $size);
     }
 }
 
